<resources>
    <string name="app_name">Kraken API Widget</string>
    <string name="preference_file_key">com.example.michaelrokas.cryptowidget.SETTINGS_FILE</string>

    <string name="api_key">Kraken API Key</string>
    <string name="private_key">Kraken Private Key</string>
    <string name="settings">Settings</string>
    <string name="save_settings">Save Settings</string>
    <string name="show_time">Show time of last refresh</string>
    <string name="qr_scanner">QR Scanner</string>

    <string name="attention">Attention</string>
    <string name="disclaimer">
        All keys are stored locally on the device and are &lt;b&gt;NOT&lt;/b&gt; encrypted. This means that anyone with access to your device has access to your keys. Use at own risk and only apply the following permissions to your keys.
    </string>
    <string name="key_requirment1">\u2022 Query Funds</string>
    <string name="key_requirment2">\u2022 Query Open Orders &amp; Trades</string>

    <string name="powered_by">Powered By</string>

    <!-- Google Mobile Vision -->
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">QR Scanner cannot run because it does not have camera permissions</string>

</resources>
